--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>flexboxes</title>
 </head>
 <body>
-    <div class="card-container"></div>
+    <div class="card-container">
+        <div class="card">
+            
+        </div>
+    </div>
 </body>
 </html>
