class design added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flexboxes</title>
+    <style>
+        .card-container{
+            background-color:aquamarine;
+            flex-direction: row;
+            display:flex;
+            justify-content: center;
+            height: 300px;
+            align-items: center;
+        }
+        
+    </style>
 </head>
 <body>
     <div class="card-container">
         <div class="card">
-            
+
         </div>
     </div>
 </body>
