--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
             height: 300px;
             align-items: center;
         }
+
+        .card{
+            width:150px;
+            height:150px;
+            border: 5px solid blue;
+            border-radius:10px;
+            margin:4px;
+            background-color:beige;
         
+        }
+
+        .card-title{
+            color: brown;
+            background-color: white;
+        }
     </style>
 </head>
 <body>
     <div class="card-container">
         <div class="card">
-
+    <img src="basketball.jpg" class="card-img">
+     <h2 class="card-title"> <b>BASKETBALL</b></h2>
         </div>
     </div>
 </body>
